          Suggested by Simon Reinhardt.
        - Added support of the parsing and writing of RDF documents 
          expressed in N-Triples notation.
        - Added support of the parsing and writing of RDF documents 
          expressed in Turtle notation.
        - Added an initial port of Restlet to the new Google App Engine.
          Suggested by Didier Girard.
    - API changes
        - RepresentationInfo is now concrete and has more constructors.
          Suggested by Lars Heuer.
        - UniformResource#init() now throws ResourceException and 
          catches it to update the response. Suggested by Lars Heuer.
        - Renamed UniformResource#init() into doInit().
        - Renamed UniformResource#destroy() into release().
        - Added an UniformResource#doRelease() method.
        - ClientResource now overrides finalize() to call the release()
          method.
        - Connector#isAvailable() method added to test the presence
          of the underlying connector helper.
        - Removed Context#setRealm() to prevent potential threading 
          issues. Reported by Tim Peierls.
        - Added new constructors to Representation based on the parent
          RepresentationInfo class. Suggested by Remi Dewitte.
        - Added FileRepresentation#autoDelete property. Contributed by
          Remi Dewitte.
        - Added intercepter methods to ServerServlet needed for the 
          XDB extension. Contributed by Marcelo Ochoa.
        - Added a "form" extension mapping in MetadataService for the
          media type "application/www-form-urlencoded". 
          Suggested by Tal Liron.
        - The class EmptyRepresentation is now public and the static 
          method Representation#createEmpty() has been deprecated.
        - Moved several implementation classes of the Servlet extension
          into an "org.restlet.ext.servlet.internal" package to hide
          them from the public Javadocs as they should rarely be used