@@ -9,7 +9,8 @@ Export-Package: org.restlet.ext.freemarker;
    org.restlet,
    org.restlet.resource,
    org.restlet.data"
-Import-Package: freemarker.template,
+Import-Package: freemarker.cache,
+ freemarker.template,
  org.restlet,
  org.restlet.data,
  org.restlet.representation,
